# pangu

./: README.md  pangu  pyproject.toml  requires.txt  setup.py
data/: diff_sites_CYP2D6.csv  hp_3.bed
demo_data/: HG002_target_capture.GRCh38.bam  HG002_target_capture.GRCh38.bam.bai  HG00438_wgs.GRCh38.bam  HG00438_wgs.GRCh38.bam.bai  HG01190_target_capture.GRCh38.bam  HG01190_target_capture.GRCh38.bam.bai  NA17244_amp_consensus.GRCh38.bam  NA17244_amp_consensus.GRCh38.bam.bai  NA17244_amp_hifi.GRCh38.bam  NA17244_amp_hifi.GRCh38.bam.bai  NA20129_wgs.GRCh38.bam  NA20129_wgs.GRCh38.bam.bai
demo_data/example/: NA20129.labeledReads.bam.bai  NA20129_labeledReads.bam  NA20129_pharmcat.tsv  NA20129_report.json
genes/: CYP2D6.yaml
src/: cyp2d6_typer.py  report.py  svcaller.py  utils.py
src/pangu/: __main__.py  corevar.py  cyp2d6_typer.py  svcaller.py  utils.py
src/pangu/data/CYP2D6/: CYP2D6.yaml  GRCh38_chr22.fa.gz.gzi  hp_4.bed
